# java-version-switch

./: Cargo.toml  README.md  install.sh  uninstall.sh
docs/: DEVELOPMENT.md  使用文档.md
src/: main.rs
