[package]
name = "jvs"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to manage and switch Java versions on macOS and Linux"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
